--- a/funnfood/templates/basic.html
+++ b/funnfood/templates/basic.html
@@ -17,7 +17,7 @@
     <!-- ===== Website Title ===== -->
     <!-- ===== Website Title ===== -->
     <title>Fun n Food Water Park</title>
-    <link rel="shortcut icon" href="{% static 'images/fun n food/Fun N Food Logo/logo.svg' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'images/fun n food/Fun N Food Logo/Logo.svg' %}" type="image/x-icon">
     <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
 
     <!-- ===== Google Fonts ===== -->
@@ -37,7 +37,7 @@
 </head>
 <body>
 	<div class="preloader">
-        <img class="preloader__image" width="200" height="70" src="{% static 'images/fun n food/Fun N Food Logo/logo.svg' %}" alt="" />
+        <img class="preloader__image" width="200" height="70" src="{% static 'images/fun n food/Fun N Food Logo/Logo.svg' %}" alt="" />
     </div>
 
 
