--- a/funnfood/templates/basic.html
+++ b/funnfood/templates/basic.html
@@ -63,7 +63,7 @@
                 <!-- Logo -->
                 <div class="col-md-4">
                      <!-- INSERT YOUR LOGO HERE -->
-                    <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/fun n food/Fun N Food Logo/logo.svg' %}" alt="logo"></a>
+                    <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/fun n food/Fun N Food Logo/Logo.svg' %}" alt="logo"></a>
    
                 </div>
                
@@ -171,9 +171,9 @@
                 <div class="col-md-2 col-xs-6 footer-social">
                     <h4>follow us</h4>
                     <ul class="footer-links">
-                        <li><i class="fa fa-facebook"></i><a style="margin-left: 15px;" href="#"> facebook</a></li>
-                        <li><i class="fa fa-twitter"></i><a style="margin-left: 10px;" href="#"> twitter</a></li>
-                        <li><i class="fa fa-instagram"></i><a style="margin-left: 10px;" href="#"> instagram</a></li>
+                        <li><i class="fa fa-facebook"></i><a style="margin-left: 15px;" href="https://www.facebook.com/funnfoodwaterdelhi/"> facebook</a></li>
+                        <li><i class="fa fa-twitter"></i><a style="margin-left: 10px;" href="https://twitter.com/FunNFoodWater"> twitter</a></li>
+                        <li><i class="fa fa-instagram"></i><a style="margin-left: 10px;" href="https://www.instagram.com/funnfoodwaterpark/"> instagram</a></li>
                         <li><i class="fa fa-linkedin"></i><a style="margin-left: 10px;" href="#"> Linkedin</a></li>
                     </ul>
                 </div>
