--- a/funnfood/templates/thanks.html
+++ b/funnfood/templates/thanks.html
@@ -19,7 +19,7 @@
     <!-- ===== Website Title ===== -->
     <!-- ===== Website Title ===== -->
     <title>Fun n Food Water Park</title>
-    <link rel="shortcut icon" href="{% static 'images/fun n food/Fun N Food Logo/logo.svg' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'images/fun n food/Fun N Food Logo/Logo.svg' %}" type="image/x-icon">
     <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
 
     <!-- ===== Google Fonts ===== -->
