--- a/funnfood/templates/coming-soon.html
+++ b/funnfood/templates/coming-soon.html
@@ -19,8 +19,7 @@
     <!-- ===== Website Title ===== -->
     <!-- ===== Website Title ===== -->
     <title>Fun n Food Water Park</title>
-    <link rel="shortcut icon" href="{% static 'images/fun n food/Fun N Food Logo/logo.svg' %}" type="image/x-icon">
-    <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" href="{% static 'images/fun n food/Fun N Food Logo/Logo.svg' %}" type="image/x-icon">
 
     <!-- ===== Google Fonts ===== -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans" rel="stylesheet">
@@ -39,7 +38,7 @@
 </head>
 <body>
     <div class="preloader">
-        <img class="preloader__image" width="200" height="70" src="{% static 'images/fun n food/Fun N Food Logo/logo.svg' %}" alt="" />
+        <img class="preloader__image" width="200" height="70" src="{% static 'images/fun n food/Fun N Food Logo/Logo.svg' %}" alt="" />
     </div>
 
 
@@ -50,7 +49,7 @@
 
                 <!-- Logo -->
                 <div class="col-md-4">
-                    <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/fun n food/Fun N Food Logo/logo.svg' %}" alt="logo"></a>
+                    <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/fun n food/Fun N Food Logo/Logo.svg' %}" alt="logo"></a>
                     <!-- INSERT YOUR LOGO HERE -->
                     
                 </div>
@@ -105,7 +104,7 @@
     <!-- ===== Main Section ===== -->
     <section class="main" id="coming-soon">
         <!-- Fullscreen -->
-        <div style="background-image: url('{% static 'images/fun n food/random/water.jpg' %}');" class="fullscreen overlay" id="index-video">
+        <div style="background-image: url('{% static 'images/fun n food/random/water.JPG' %}');" class="fullscreen overlay" id="index-video">
 
              
 
