--- a/funnfood/templates/index.html
+++ b/funnfood/templates/index.html
@@ -262,11 +262,11 @@
                     <div class="col-md-5 col-sm-6 col-xs-12 training-course">
                         <div>
                             <a href="{% url 'water-park' %}">
-                                <img src="{% static 'images/fun n food/water.JPG' %}" alt="">
+                                <img src="{% static 'images/fun n food/water.jpg' %}" alt="">
                             </a>
                             <h4>Water Park</h4>
                             <p>As a member of the World Water Park Association, USA. the Fun N Food Water Park offers India's largest collection of Water slides and attractions for the toddler learning how to swim to the Water sports enthusiast seeking a thrill.
-                            Thrills, chills and spills … don't miss them at the Fun n Food Water Park offers its patrons a new twisting turning and sliding experience. don't miss them at the Fun n Food Water Park offers its patrons a new twisting turning and sliding experience.</p>
+                            Thrills, chills and spills … don't miss them a new twisting turning and sliding experience at the Fun n Food Water Park.</p>
                             <a style="margin-top: 27px;" href="{% url 'water-park' %}" class="btn">Read More</a>
                         </div>
                     </div>
@@ -277,7 +277,7 @@
                                 <img src="{% static 'images/fun n food/offers.jpg' %}" alt="">
                             </a>
                             <h4>Offers</h4>
-                            <p>Super Weekdays Now enjoy Super Weekdays at Fun n Food Water Park and de-stress yourself from your regular routine lifestyle. Get different offers from Monday to Friday. To avail this offer, Click on "View Offer Code" enter basic information like Full Name, Email ID, Phone Number and Address etc. choose the offer interested in and get the voucher code instantly. Show this voucher code at Fun N Food Water Park Booking center to avail this offer. – Road show meant for adventure lovers, has seven thrilling</p>
+                            <p>Now enjoy Super Weekdays at Fun n Food Water Park and de-stress yourself from your regular routine lifestyle. Get different offers from Monday to Friday. To avail this offer, Click on "Book Online" enter basic information like Full Name, Email ID, Phone Number and Address etc. and get the voucher code instantly. Show this voucher code at Fun N Food Water Park Booking center to avail this offer.</p>
                             <a style="margin-top: 7px;" href="{% url 'book-online' %}" class="btn">Read More</a>
                         </div>
                     </div>
@@ -287,7 +287,7 @@
                                 <img src="{% static 'images/fun n food/member.jpg' %}" alt="">
                             </a>
                             <h4>Memberships</h4>
-                            <p>Make your holidays a lot more special with exclusive Membership. When the dust finally settles down and the life is back to normal, Fun N Food Nagpur, the premium and prominent Water & Amusement Park will be opening its gates for unlimited Fun & Excitement.There are more than 20 attractions placed in two entertainment zones: The Road Show - Road show meant for adventure lovers, has seven thrilling attractions (also known as the teen zone).</p>
+                            <p>Make your holidays a lot more special with exclusive Membership. When the dust finally settles down and the life is back to normal, Fun N Food Delhi, the premium and prominent Water Park will be opening its gates for unlimited Fun & Excitement.There are more than 20 attractions placed in two entertainment zone.</p>
                             <a style="margin-top: 25px;" href="{% url 'coming-soon' %}" class="btn">Read More</a>
                         </div>
                     </div>
