--- a/funnfood/assets/css/responsive.css
+++ b/funnfood/assets/css/responsive.css
@@ -172,6 +172,11 @@ Author URI: gnodesign.com
     margin-left: 0px;
 
     }
+     #pages.main .page-title h2 {
+
+        top: 80%;
+        font-size: 30px;
+    }
     
     /**************** 
         TOP HEADER
@@ -265,6 +270,11 @@ Author URI: gnodesign.com
     section#blog-post .post-quote blockquote {
         padding: 90px 0;
     }
+    #pages.main .page-title h2 {
+
+        top: 80%;
+        font-size: 30px;
+    }
 
 }
 
@@ -286,6 +296,11 @@ Author URI: gnodesign.com
         width: 100%;
         top: 30%;
         transform: translateY(20%);
+    }
+     #pages.main .page-title h2 {
+
+        top: 80%;
+        font-size: 30px;
     }
 }
 
@@ -336,6 +351,11 @@ Author URI: gnodesign.com
     footer .footer-newsletter {
         margin-top: 0;
     }
+    #pages.main .page-title h2 {
+
+        top: 80%;
+        font-size: 30px;
+    }
 }
 
 
@@ -356,6 +376,11 @@ Author URI: gnodesign.com
     ****************/
     article.blog-post {
         padding: 25px;
+    }
+     #pages.main .page-title h2 {
+
+        top: 80%;
+        font-size: 30px;
     }
 }
 
@@ -425,6 +450,11 @@ Author URI: gnodesign.com
     text-align: center;
     margin-left: 0px;
 
+    }
+     #pages.main .page-title h2 {
+
+        top: 80%;
+        font-size: 30px;
     }
 }
 
@@ -498,6 +528,11 @@ Author URI: gnodesign.com
     margin-left: 0px;
 
     }
+     #pages.main .page-title h2 {
+
+        top: 80%;
+        font-size: 30px;
+    }
 }
 
 
@@ -534,6 +569,11 @@ Author URI: gnodesign.com
     margin-left: 0px;
 
     }
+     #pages.main .page-title h2 {
+
+        top: 80%;
+        font-size: 30px;
+    }
 }
 
 
@@ -554,6 +594,11 @@ Author URI: gnodesign.com
     ****************/
     #not-found.main {
         height: 700px;
+    }
+     #pages.main .page-title h2 {
+
+        top: 80%;
+        font-size: 30px;
     }
 }
 
@@ -605,6 +650,11 @@ Author URI: gnodesign.com
         position: absolute;
         margin-top: 30px;
         right: 0%;
+    }
+     #pages.main .page-title h2 {
+
+        top: 80%;
+        font-size: 30px;
     }
     
 
