--- a/funnfood/templates/index.html
+++ b/funnfood/templates/index.html
@@ -277,7 +277,7 @@
                                 <img src="{% static 'images/fun n food/offers.jpg' %}" alt="">
                             </a>
                             <h4>Offers</h4>
-                            <p>Now enjoy Super Weekdays at Fun n Food Water Park and de-stress yourself from your regular routine lifestyle. Get different offers from Monday to Friday. To avail this offer, Click on "Book Online" enter basic information like Full Name, Email ID, Phone Number and Address etc. and get the voucher code instantly. Show this voucher code at Fun N Food Water Park Booking center to avail this offer.</p>
+                            <p>Enjoy Super Weekdays at Fun n Food Water Park and de-stress yourself from your regular routine lifestyle. Get different offers from Monday to Friday. To avail this offer, Click on "Book Online" enter basic information like Full Name, Email ID, Phone Number and Address etc. and get the voucher code instantly. Show this voucher code at Fun N Food Water Park Booking center to avail this offer.</p>
                             <a style="margin-top: 7px;" href="{% url 'book-online' %}" class="btn">Read More</a>
                         </div>
                     </div>
