--- a/funnfood/templates/entry-tickets.html
+++ b/funnfood/templates/entry-tickets.html
@@ -48,7 +48,7 @@
             <!-- Start of Blog Post 1 -->
             <article class="col-md-12 blog-post">
                  <div class="col-md-3 blog-thumbnail">
-                    <a href="#"><img src="{% static 'images/fun n food/env.jpg' %}" class="img-responsive" alt=""></a>
+                    <a href="#"><img src="{% static 'images/fun n food/member.jpg' %}" class="img-responsive" alt=""></a>
                 </div>
 
                 {% if ticket %}
