--- a/funnfood/templates/park-timings.html
+++ b/funnfood/templates/park-timings.html
@@ -24,7 +24,7 @@
             <!-- Start of Blog Post 1 -->
             <article style="margin-top: 170px;" class="col-md-12 blog-post">
                  <div class="col-md-3 blog-thumbnail">
-                    <a href="#"><img style="height: 350px;" src="{% static 'images/fun n food/env.jpg' %}" class="img-responsive" alt=""></a>
+                    <a href="#"><img style="height: 350px;" src="{% static 'images/fun n food/member.jpg' %}" class="img-responsive" alt=""></a>
                 </div>
                  {% if timings %}
                         {% for time in timings %}
