--- a/funnfood/templates/coming-soon.html
+++ b/funnfood/templates/coming-soon.html
@@ -45,6 +45,10 @@
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TPZLJC2"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="preloader">
         <img class="preloader__image" width="200" height="70" src="{% static 'images/fun n food/Fun N Food Logo/Logo.svg' %}" alt="" />
     </div>
