--- a/funnfood/templates/thanks.html
+++ b/funnfood/templates/thanks.html
@@ -45,6 +45,10 @@
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+            <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TPZLJC2"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="col-md-12 pad80">
                 <h2 class="section-title">Thank You!</h2>
                 <p style="text-align: center;">Your mail has been received. You will soon receive a reply on your email. </p>
