--- a/funnfood/templates/basic.html
+++ b/funnfood/templates/basic.html
@@ -104,6 +104,9 @@
                                 <a href="{% url 'gallery' %}" role="button" aria-expanded="false">Gallery</a>
                             </li>
                             <li class="dropdown" role="presentation">
+                                <a href="{% url 'water-park' %}" role="button" aria-expanded="false">Water Park Attractions</a>
+                            </li>
+                            <li class="dropdown" role="presentation">
                                 <a href="{% url 'coming-soon' %}" role="button" aria-expanded="false">Group & Event Package</a>
                             </li>
                             <li class="dropdown" role="presentation">
@@ -114,6 +117,9 @@
                             </li>
                             <li class="dropdown" role="presentation">
                                 <a href="{% url 'entry-tickets' %}" role="button" aria-expanded="false">Entry Tickets</a>
+                            </li>
+                            <li class="dropdown" role="presentation">
+                                <a href="{% url 'book-online' %}" role="button" aria-expanded="false">Book Online</a>
                             </li>
                             <li class="dropdown" role="presentation">
                                 <a href="{% url 'contact' %}" role="button" aria-expanded="false">Contact Us</a>
