--- a/funnfood/templates/basic.html
+++ b/funnfood/templates/basic.html
@@ -18,8 +18,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
 
     <!-- ===== Meta Tags - Description for Search Engine purposes ===== -->
-    <meta name="description" content="Swimmerland - Water Park HTML Template">
-    <meta name="keywords" content="water park, pool, summer, swimming, swimmerland">
+    <meta name="description" content="Fun n Food Water Park">
+    <meta name="keywords" content="water park, pool, summer, swimming">
     <meta name="author" content="GnoDesign">
 
     <!-- ===== Website Title ===== -->
