--- a/funnfood/templates/basic.html
+++ b/funnfood/templates/basic.html
@@ -119,9 +119,6 @@
                                 <a href="{% url 'entry-tickets' %}" role="button" aria-expanded="false">Entry Tickets</a>
                             </li>
                             <li class="dropdown" role="presentation">
-                                <a href="{% url 'book-online' %}" role="button" aria-expanded="false">Book Online</a>
-                            </li>
-                            <li class="dropdown" role="presentation">
                                 <a href="{% url 'contact' %}" role="button" aria-expanded="false">Contact Us</a>
                             </li>
                         </ul>
@@ -189,10 +186,9 @@
                 <div class="col-md-2 col-xs-6 footer-social">
                     <h4>follow us</h4>
                     <ul class="footer-links">
-                        <li><i class="fa fa-facebook"></i><a style="margin-left: 15px;" href="https://www.facebook.com/funnfoodwaterdelhi/"> facebook</a></li>
-                        <li><i class="fa fa-twitter"></i><a style="margin-left: 10px;" href="https://twitter.com/FunNFoodWater"> twitter</a></li>
-                        <li><i class="fa fa-instagram"></i><a style="margin-left: 10px;" href="https://www.instagram.com/funnfoodwaterpark/"> instagram</a></li>
-                        <li><i class="fa fa-linkedin"></i><a style="margin-left: 10px;" href="#"> Linkedin</a></li>
+                        <li><i class="fa fa-facebook"></i><a style="margin-left: 15px;" href="https://www.facebook.com/funnfoodpark"> facebook</a></li>
+                        <li><i class="fa fa-twitter"></i><a style="margin-left: 10px;" href="https://www.twitter.com/FunNFoodPark"> twitter</a></li>
+                        <li><i class="fa fa-instagram"></i><a style="margin-left: 10px;" href="https://www.instagram.com/funnfoodpark"> instagram</a></li>
                     </ul>
                 </div>
                 <!-- End of Footer Social Media Links -->
