--- a/funnfood/templates/entry-tickets.html
+++ b/funnfood/templates/entry-tickets.html
@@ -61,7 +61,7 @@
                     <p><i class="fa fa-money"></i> Adult (Height Above 4'6") - Rs {{tkt.child_above_4f_6i}}</p>
                     <p><i class="fa fa-money"></i> Stag (Single Male) - Rs {{tkt.stag}}</p>
                     <p style="margin-top: 20px;">Note: Rights of Admission Reserved Re-Entry Not Allowed. Rates are subject to change without prior notice.</p>
-                    <a style="margin-top: 20px;" href="{% url 'book-online' %}" class="btn">Book Now</a>
+                    <a style="margin-top: 20px;" href="{% url 'contact' %}" class="btn">Let's Go</a>
                 </div>
                     {% endfor %}
                 {% endif %}
