--- a/funnfood/templates/index.html
+++ b/funnfood/templates/index.html
@@ -13,7 +13,7 @@
                     <h3>Welcome to <br> <span>Fun n Food Water Park</span></h3>
                     <h4>The Most Addictive Place In  <span>Delhi</span>!</h4>
                     <div class="cta">
-                        <a href="{% url 'book-online' %}" class="btn">Book Online</a>
+                        <a href="{% url 'contact' %}" class="btn">Let's Go</a>
                     </div>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                     <h2 class="section-title">About Us</h2>
                     <div class="about-description">
                         <p>As a member of the World Water Park Association, USA. the Fun N Food Water Park offers India's largest collection of Water slides and attractions for the toddler learning how to swim to the Water sports enthusiast seeking a thrill. Thrills, chills and spills don't miss them at the Fun n Food Water Park offers its patrons a new twisting turning and sliding experience. The Fun 'N' Food Water Park, located just three kilometers from the International airport on the Old Delhi Gurgaon Road. The Fun 'N' Food Water Park is an endeavor to create a fusion of our rich Indian legacy and modern recreational facilities.</p>
-                        <a href="{% url 'book-online' %}" class="btn">Book Online</a>
+                        <a href="{% url 'contact' %}" class="btn">Let's Go</a>
                     </div>
                 </div>
 
@@ -278,7 +278,7 @@
                             </a>
                             <h4>Offers</h4>
                             <p>Enjoy Super Weekdays at Fun n Food Water Park and de-stress yourself from your regular routine lifestyle. Get different offers from Monday to Friday. To avail this offer, Click on "Book Online" enter basic information like Full Name, Email ID, Phone Number and Address etc. and get the voucher code instantly. Show this voucher code at Fun N Food Water Park Booking center to avail this offer.</p>
-                            <a style="margin-top: 7px;" href="{% url 'book-online' %}" class="btn">Read More</a>
+                            <a style="margin-top: 7px;" href="{% url 'contact' %}" class="btn">Read More</a>
                         </div>
                     </div>
                     <div class="col-md-5 col-sm-6 col-xs-12 training-course">
