--- a/funnfood/templates/park-timings.html
+++ b/funnfood/templates/park-timings.html
@@ -36,7 +36,7 @@
                     <h5><a href="#">Weekends & Public Holidays</a></h5>
                     <p style="margin-top: 10px;"><i class="fa fa-clock-o"></i> {{time.weekend_and_holidays}}</p>
                     <p style="margin-top: 30px;">Note : Timings are subject to change without prior notice | Rights of admission reserved | Re-Entry not Allowed.</p>
-                    <a style="margin-top: 20px;" href="{% url 'book-online' %}" class="btn">Book Now</a>
+                    <a style="margin-top: 20px;" href="{% url 'contact' %}" class="btn">Let's Go</a>
                 </div>
                         {% endfor %}
                 {% endif %}
