--- a/funnfood/templates/park-timings.html
+++ b/funnfood/templates/park-timings.html
@@ -31,7 +31,7 @@
                 <div class="col-md-9 blog-desc">
                     <h4><a href="#">Park Timings</a></h4>
                     <p style="margin-top: 15px;">We are open 364 days a year. That’s every day except Diwali with extended fun hours during peak holiday seasons.</p>
-                    <h5><a href="#">Monday to Friday</a></h5>
+                    <h5><a href="#">Weekdays</a></h5>
                     <p style="margin-top: 10px;"><i class="fa fa-clock-o"></i> {{time.monday_to_friday}}</p>
                     <h5><a href="#">Weekends & Public Holidays</a></h5>
                     <p style="margin-top: 10px;"><i class="fa fa-clock-o"></i> {{time.weekend_and_holidays}}</p>
